[gd_scene load_steps=2 format=3 uid="uid://crra53ceh8s73"]

[ext_resource type="Script" uid="uid://cncv4gvwowd8j" path="res://scripts/CardSelection.gd" id="1_s0pmg"]

[node name="CardSelection" type="Control"]
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
script = ExtResource("1_s0pmg")

[node name="SelectCardContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 512.0
offset_top = 1792.0
offset_right = 1536.0
offset_bottom = 2048.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="SelectCard" type="Button" parent="SelectCardContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
disabled = true
text = "Select Card"

[node name="ScrollHandLeftContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1792.0
offset_right = 512.0
offset_bottom = 2048.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScrollHandLeft" type="Button" parent="ScrollHandLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
disabled = true
text = "< LEFT <"

[node name="ScrollHandRightContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1536.0
offset_top = 1792.0
offset_right = 2048.0
offset_bottom = 2048.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ScrollHandRight" type="Button" parent="ScrollHandRightContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
disabled = true
text = "> RIGHT >"

[node name="Hand" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_top = 992.0
offset_right = 2048.0
offset_bottom = 1792.0
